# crafting_game

./: .gitignore  Cargo.toml
CraftingGame/: Todos.md
CraftingGame/.obsidian/: workspace.json
examples/: simple_box.rs
src/: camera.rs  chunk.rs  inventory_ui.rs  item.rs  item_container.rs  main.rs  player.rs  tile_picker_backend.rs  world.rs  world_object.rs
