[package]
name = "replicon_test"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.1", features = ["dynamic_linking","serialize"] }
bevy-inspector-egui = "0.25.0"
bevy_ecs_tilemap = { version = "0.14.0", features = ["serde", "atlas"] }
bevy_rapier2d = "0.27.0"
bevy_replicon = "0.27.0"
bevy_replicon_renet = "0.4.0"
bevy_replicon_snap = { git = "https://github.com/Darkluke1111/bevy_replicon_snap.git" }
clap = { version = "4.5.13", features = ["derive"]}
serde = "1.0.204"
rand_core = "0.6"
bevy_rand = { version = "0.7.1", features = ["wyrand"] }
sickle_ui = "0.2.1"

[profile.dev]
opt-level = 1


[profile.dev.package."*"]
opt-level = 3

[target.x86_64-pc-windows-msvc]
linker = "rust-lld.exe"

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

[[example]]
name = "simple_box"

